update template model, pom